successfully completed usertoken and clienttoken setup